frotned: assign expense category to transfer
