# backend/Core/MyBudget.Application/Budgets/Model/BudgetDTO.cs
@@ -1,18 +1,11 @@
 ﻿namespace MyBudget.Application.Budgets.Model;
 
-public record BudgetListItemDTO(
-    Guid Id,
-    string Name,
-    string? Description,
-    DateTime CreationDate,
-    BudgetDTOStatus Status
-);
-
 public record BudgetDTO(
     Guid Id,
     string Name,
     string? Description,
     BudgetDTOStatus Status,
+    DateTime CreationDate,
     IEnumerable<CategoryDTO> Categories
 );
 
